@@ -1,3 +1,8 @@
+2000-01-17  Fernando Nasser  <fnasser@totem.to.cygnus.com>
+
+	* gdb.base/default.exp: Fix expected pattern.
+	* gdb.base/help.exp: Same.
+
 2000-01-10  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>
 
 	* gdb.base/so-indr-cl.exp: Don't execute the test if not on HPUX.
